@@ -25,7 +25,7 @@ django-extended-choices = git https://github.com/twidi/django-extended-choices.g
 mapentity = git https://github.com/makinacorpus/Geotrek.git branch=mapentity
 paperclip = git https://github.com/makinacorpus/Geotrek.git branch=paperclip
 django-leaflet = git https://github.com/makinacorpus/django-leaflet.git rev=a0e90b54d50c11ed3dd72fed03de2953b27d2a55
-django-geojson = git https://github.com/makinacorpus/django-geojson.git rev=58b5e7ffb348c4f67cf40cfe279a25a70c3f7773
+django-geojson = git https://github.com/makinacorpus/django-geojson.git rev=66093d737886d725b5fcd8d07a872995d9059be6
 django-appypod = git https://github.com/makinacorpus/django-appypod.git
 django-screamshot = git https://github.com/makinacorpus/django-screamshot.git
 convertit = git https://github.com/makinacorpus/convertit.git rev=c6ff9356d36f7104916a9a97b40d6e6bcd29c4fd
